# streamdeck-python-sdk-pi

./: README-PYPI.md  README.md  pyproject.toml
example/property_inspector/: myaction_pi.py
src/streamdeck_sdk_pi/: __init__.py
